Updating papers.tex to the actual file from 2021

--- a/2021_Proceedings_ISMIR/papers.tex
+++ b/2021_Proceedings_ISMIR/papers.tex
@@ -1,13 +1,110 @@
 \thispagestyle{empty}\cleardoublepage
+\phantomsection
 \addcontentsline{toc}{section}{Papers}
 \includepdf[pages=1,pagecommand=\thispagestyle{empty}]{external/12_Papers_SectionDividers.pdf}%
 \thispagestyle{empty}\cleardoublepage
 
-\includepaper{AUTOMATIC RECOGNITION OF TEXTURE IN RENAISSANCE MUSIC}{Emilia Parada-Cabaleiro, Maximilian Schmitt, Anton Batliner, Bjorn W. Schuller, Markus Schedl}{articles/paper_019.pdf}
-\includepaper{Phase-Aware Joint Beat and Downbeat Estimation Based on Periodicity of Metrical Structure}{Takehisa Oyama, Ryoto Ishizuka, Kazuyoshi Yoshii}{articles/paper_014.pdf}
-\includepaper{Joint Estimation of Note Values and Voices for Audio-to-Score Piano Transcription}{Yuki Hiramatsu, Eita Nakamura, Kazuyoshi Yoshii}{articles/paper_013.pdf}
-\includepaper{Human-in-the-Loop Adaptation for Interactive Musical Beat Tracking}{Kazuhiko Yamamoto}{articles/paper_027.pdf}
-\includepaper{Kiite Cafe: A Web Service for Getting Together Virtually to Listen to Music}{Kosetsu Tsukuda, Keisuke Ishida, Masahiro Hamasaki, Masataka Goto}{articles/paper_032.pdf}
-\includepaper{THE WORDS REMAIN THE SAME: COVER DETECTION WITH LYRICS TRANSCRIPTION}{Andrea Vaglio, Romain Hennequin, Manuel Moussallam, Gael Richard}{articles/paper_024.pdf}
-\includepaper{CollageNet: Fusing arbitrary melody and accompaniment into a coherent song}{Abudukelimu Wuerkaixi, Christodoulos Benetatos, Zhiyao Duan, Changshui Zhang}{articles/paper_031.pdf}
-
+\includepaper{Four-way Classification of Tabla Strokes with Models Adapted from Automatic Drum Transcription}{Rohit M A, Amitrajit Bhattacharjee, Preeti Rao}{articles/156.pdf}
+\includepaper{A Contextual Latent Space Model: Subsequence Modulation in Melodic Sequence}{Taketo Akama}{articles/054.pdf}
+\includepaper{OMR-assisted Transcription: A Case Study with Early prints}{María Alfaro-Contreras, David Rizo, Jose M. Inesta, Jorge Calvo-Zaragoza}{articles/107.pdf}
+\includepaper{Deeper Convolutional Neural Networks and Broad Augmentation Policies Improve Performance in Musical Key Estimation}{Stefan A Baumann}{articles/122.pdf}
+\includepaper{The Music Performance Markup Format and Ecosystem}{Axel Berndt}{articles/099.pdf}
+\includepaper{Identification of Rhythm Guitar Sections in Symbolic Tablatures}{Louis Bigo, David Regnier, Nicolas Martin}{articles/155.pdf}
+\includepaper{On-Line Audio-to-Lyrics Alignment Based on a Reference Performance}{Charles Brazier, Gerhard Widmer}{articles/095.pdf}
+\includepaper{Visualizing Intertextual Form with Arc Diagrams: Contour and Schema-based Methods}{Aaron Carter-Enyi, Gilad Rabinovitch, Nathaniel Condit-Schultz}{articles/228.pdf}
+\includepaper{Unsupervised Domain Adaptation for Document Analysis of Music Score Images}{Francisco J. Castellanos, Antonio-Javier Gallego, Jorge Calvo-Zaragoza}{articles/126.pdf}
+\includepaper{Codified Audio Language Modeling Learns Useful Representations for Music Information Retrieval}{Rodrigo Castellon, Chris Donahue, Percy Liang}{articles/251.pdf}
+\includepaper{Variable-Length Music Score Infilling via XLNet and Musically Specialized Positional Encoding}{Chin-Jui Chang, Chun-Yi Lee, Yi-Hsuan Yang}{articles/041.pdf}
+\includepaper{SurpriseNet: Melody Harmonization Conditioning on User-controlled Surprise Contours}{Yi-Wei Chen, Hung-Shin Lee, Yen-Hsing Chen, Hsin-Min Wang}{articles/199.pdf}
+\includepaper{Semi-supervised Violin Fingering Generation Using Variational Autoencoders}{Vincent K.M. Cheung, Hsuan-Kai Kao, Li Su}{articles/139.pdf}
+\includepaper{Listen, Read, and Identify: Multimodal Singing Language Identification of Music}{Keunwoo Choi, Yuxuan Wang}{articles/050.pdf}
+\includepaper{On Perceived Emotion in Expressive Piano Performance: Further Experimental Evidence for the Relevance of Mid-level Perceptual Features}{Shreyan Chowdhury, Gerhard Widmer}{articles/127.pdf}
+\includepaper{Cosine Contours: a Multipurpose Representation for Melodies}{Bas Cornelissen, Willem Zuidema, John Ashley Burgoyne}{articles/103.pdf}
+\includepaper{Controllable Deep Melody Generation via Hierarchical Music Structure Representation}{Shuqi Dai, Zeyu Jin, Celso Gomes, Roger Dannenberg}{articles/185.pdf}
+\includepaper{MSTRE-Net: Multistreaming Acoustic Modeling for Automatic Lyrics Transcription}{Emir Demirel, Sven Ahlbäck, Simon Dixon}{articles/083.pdf}
+\includepaper{Towards Automatic Instrumentation by Learning to Separate Parts in Symbolic Multitrack Music}{Hao-Wen Dong, Chris Donahue, Taylor Berg-Kirkpatrick, Julian Mcauley}{articles/293.pdf}
+\includepaper{An Empirical Evaluation of End-to-End Polyphonic Optical Music Recognition}{Sachinda Edirisooriya, Hao-Wen Dong, Julian Mcauley, Taylor Berg-Kirkpatrick}{articles/237.pdf}
+\includepaper{A Hardanger Fiddle Dataset with Performances Spanning Emotional Expressions and Annotations Aligned using Image Registration}{Anders Elowsson, Olivier Lartillot}{articles/286.pdf}
+\includepaper{Building the MetaMIDI Dataset: Linking Symbolic and Audio Musical Data}{Jeffrey Ens, Philippe Pasquier}{articles/165.pdf}
+\includepaper{Modeling and Inferring Proto-Voice Structure in Free Polyphony}{Christoph Finkensiep, Martin A Rohrmeier}{articles/153.pdf}
+\includepaper{PKSpell: Data-Driven Pitch Spelling and Key Signature Estimation}{Francesco Foscarin, Nicolas Audebert, Raphael Fournier-S'Niehotta}{articles/114.pdf}
+\includepaper{Filosax: A Dataset of Annotated Jazz Saxophone Recordings}{Dave Foster, Simon Dixon}{articles/205.pdf}
+\includepaper{An Interpretable Music Similarity Measure Based on Path Interestingness}{Giovanni Gabbolini, Derek Bridge}{articles/135.pdf}
+\includepaper{Leveraging Hierarchical Structures for Few-Shot Musical Instrument Recognition}{Hugo F Flores Garcia, Aldo Aguilar, Ethan Manilow, Bryan Pardo}{articles/250.pdf}
+\includepaper{What if the `When' Implies the `What'?: Human harmonic analysis datasets clarify the relative role of the separate steps in automatic tonal analysis}{Mark R H Gotham, Rainer Kleinertz, Christof Weiss, Meinard Müller, Stephanie Klauk}{articles/136.pdf}
+\includepaper{Let's agree to disagree: Consensus Entropy Active Learning for Personalized Music Emotion Recognition}{Juan S. Gómez-Cañón, Estefania Cano, Yi-Hsuan Yang, Perfecto Herrera, Emilia Gomez}{articles/096.pdf}
+\includepaper{Sequence-to-Sequence Piano Transcription with Transformers}{Curtis Hawthorne, Ian Simon, Rigel Swavely, Ethan Manilow, Jesse Engel}{articles/242.pdf}
+\includepaper{Neural Waveshaping Synthesis}{Ben Hayes, Charalampos Saitis, Gyorgy Fazekas}{articles/042.pdf}
+\includepaper{A Semi-automated Workflow Paradigm for the Distributed Creation and Curation of Expert Annotations}{Johannes Hentschel, Fabian C. Moss, Markus Neuwirth, Martin A Rohrmeier}{articles/249.pdf}
+\includepaper{BeatNet: CRNN and Particle Filtering for Online Joint Beat, Downbeat and Meter Tracking}{Mojtaba Heydari, Frank Cwitkowitz, Zhiyao Duan}{articles/172.pdf}
+\includepaper{Joint Estimation of Note Values and Voices for Audio-to-Score Piano Transcription}{Yuki Hiramatsu, Eita Nakamura, Kazuyoshi Yoshii}{articles/013.pdf}
+\includepaper{Learning Note-to-note Affinity for Voice Segregation and Melody Line Identification of Symbolic Music Data}{Yo-Wei Hsiao, Li Su}{articles/038.pdf}
+\includepaper{VOCANO: A Note Transcription Framework for Singing Voice in Polyphonic Music}{Jui-Yang Hsu, Li Su}{articles/034.pdf}
+\includepaper{De-centering the West: East Asian Philosophies and the Ethics of Applying Artificial Intelligence to Music}{Rujing Huang, Bob L. T. Sturm, Andre Holzapfel}{articles/043.pdf}
+\includepaper{A Benchmarking Initiative for Audio-domain Music Generation using the FreeSound Loop Dataset}{Tun Min Hung, Bo-Yu Chen, Yen Tung Yeh, Yi-Hsuan Yang}{articles/057.pdf}
+\includepaper{EMOPIA: A Multi-Modal Pop Piano Dataset For Emotion Recognition and Emotion-based Music Generation}{Hsiao-Tzu Hung, Joann Ching, Seungheon Doh, Nabin Kim, Juhan Nam, Yi-Hsuan Yang}{articles/059.pdf}
+\includepaper{Piano Sheet Music Identification Using Marketplace Fingerprinting}{Kevin Ji, Daniel Yang, Timothy Tsai}{articles/193.pdf}
+\includepaper{Learning a Cross-domain Embedding Space of Vocal and Mixed Audio with a Structure-preserving Triplet Loss}{Keunhyoung Kim, Jongpil Lee, Sangeun Kum, Juhan Nam}{articles/207.pdf}
+\includepaper{Decoupling Magnitude and Phase Estimation with Deep ResUNet for Music Source Separation}{Qiuqiang Kong, Yin Cao, Haohe Liu, Keunwoo Choi, Yuxuan Wang}{articles/061.pdf}
+\includepaper{Artist Similarity Using Graph Neural Networks}{Filip Korzeniowski, Sergio Oramas, Fabien Gouyon}{articles/204.pdf}
+\includepaper{“Finding Home”: Understanding How Music Supports Listeners’ Mental Health through a Case Study of BTS}{Jin Ha Lee, Arpita Bhattacharya, Ria Antony, Nicole Santero, Anh Le}{articles/173.pdf}
+\includepaper{Cross-cultural Mood Perception in Pop Songs and its Alignment with Mood Detection Algorithms}{Harin Lee, Frank Höger, Marc Schönwiesner, Minsu Park, Nori Jacoby}{articles/225.pdf}
+\includepaper{Reconsidering Quantization in MIR}{Jordan Lenchitz}{articles/244.pdf}
+\includepaper{A Unified Model for Zero-shot Music Source Separation, Transcription and Synthesis}{Liwei Lin, Gus Xia, Qiuqiang Kong, Junyan Jiang}{articles/047.pdf}
+\includepaper{Pitch-Informed Instrument Assignment using a Deep Convolutional Network with Multiple Kernel Shapes}{Carlos Lordelo, Emmanouil Benetos, Simon Dixon, Sven Ahlbäck}{articles/256.pdf}
+\includepaper{SpecTNT: a Time-Frequency Transformer for Music Audio}{Wei-Tsung Lu, Ju-Chiang Wang, Minz Won, Keunwoo Choi, Xuchen Song}{articles/262.pdf}
+\includepaper{AugmentedNet: A Roman Numeral Analysis Network with Synthetic Training Examples and Additional Tonal Tasks}{Néstor Nápoles López, Mark R H Gotham, Ichiro Fujinaga}{articles/149.pdf}
+\includepaper{MINGUS: Melodic Improvisation Neural Generator Using Seq2Seq}{Vincenzo Madaghiele, Pasquale Lisena, Raphael Troncy}{articles/074.pdf}
+\includepaper{User-centered Evaluation of Lyrics-to-audio Alignment}{Ninon Lizé Masclef, Andrea Vaglio, Manuel Moussallam}{articles/132.pdf}
+\includepaper{Synthesizer Sound Matching with Differentiable DSP}{Naotake Masuda, Daisuke Saito}{articles/187.pdf}
+\includepaper{A Modular System for the Harmonic Analysis of Musical Scores using a Large Vocabulary}{Andrew Mcleod, Martin A Rohrmeier}{articles/071.pdf}
+\includepaper{A Deep Learning Method for Enforcing Coherence in Automatic Chord Recognition}{Gianluca Micchi, Katerina Kosta, Gabriele Medeot, Pierre Chanquion}{articles/147.pdf}
+\includepaper{Modeling Beat Uncertainty as a 2D Distribution of Period and Phase: a MIR Task Proposal}{Martin A Miguel, Diego Fernandez Slezak}{articles/275.pdf}
+\includepaper{A Case Study of Deep Enculturation and Sensorimotor Synchronization to Real Music}{Olof Misgeld, Torbjörn L Gulz, Jūra Miniotaitė, Andre Holzapfel}{articles/197.pdf}
+\includepaper{Symbolic Music Generation with Diffusion Models}{Gautam Mittal, Jesse Engel, Curtis Hawthorne, Ian Simon}{articles/270.pdf}
+\includepaper{Learning from Musical Feedback with Sonic the Hedgehog}{Faraaz Nadeem}{articles/261.pdf}
+\includepaper{DarkGAN: Exploiting Knowledge Distillation for Comprehensible Audio Synthesis With GANs}{Javier Nistal, Stefan Lattner, Gaël Richard}{articles/218.pdf}
+\includepaper{Phase-Aware Joint Beat and Downbeat Estimation Based on Periodicity of Metrical Structure}{Takehisa Oyama, Ryoto Ishizuka, Kazuyoshi Yoshii}{articles/014.pdf}
+\includepaper{Agreement Among Human and Automated Transcriptions of Global Songs}{Yuto Ozaki, John M Mcbride, Emmanouil Benetos, Peter Pfordresher, Joren Six, Adam Tierney, Polina Proutskova, Emi Sakai, Haruka Kondo, Haruno Fukatsu, Shinya Fujii, Patrick E. Savage}{articles/143.pdf}
+\includepaper{Automatic Recognition of Texture in Renaissance Music}{Emilia Parada-Cabaleiro, Maximilian Schmitt, Anton Batliner, Bjorn W. Schuller, Markus Schedl}{articles/019.pdf}
+\includepaper{Is Disentanglement enough? On Latent Representations for Controllable Music Generation}{Ashis Pati, Alexander Lerch}{articles/152.pdf}
+\includepaper{Pulse Clarity Metrics Developed from a Deep Learning Beat Tracking Model}{Nicolás Pironio, Diego Fernandez Slezak, Martin A Miguel}{articles/157.pdf}
+\includepaper{On the Veracity of Local, Model-agnostic Explanations in Audio Classification: Targeted Investigations with Adversarial Examples}{Verena Praher, Katharina Prinz, Arthur Flexer, Gerhard Widmer}{articles/078.pdf}
+\includepaper{Is there a ``language of music-video clips" ? A qualitative and quantitative study}{Laure Prétet, Gaël Richard, Geoffroy Peeters}{articles/130.pdf}
+\includepaper{Tabla Gharana Recognition from Audio music recordings of Tabla Solo performances}{Gowriprasad R, Venkatesh V, Hema A Murthy, R Aravind, Sri Rama Murty K}{articles/129.pdf}
+\includepaper{Navigating noise: Modeling perceptual correlates of noise-related semantic timbre categories with audio features}{Lindsey Reymore, Emmanuelle Beauvais-Lacasse, Bennett Smith, Stephen Mcadams}{articles/214.pdf}
+\includepaper{Quantitative User Perceptions of Music Recommendation List Diversity}{Kyle Robinson, Dan Brown}{articles/302.pdf}
+\includepaper{A Formal Model of Extended Tonal Harmony}{Martin A Rohrmeier, Fabian C. Moss}{articles/254.pdf}
+\includepaper{CRASH: Raw Audio Score-based Generative Modeling for Controllable High-resolution Drum Sound Synthesis}{Simon Rouard, Gaëtan Hadjeres}{articles/115.pdf}
+\includepaper{Curriculum Learning for Imbalanced Classification in Large Vocabulary Automatic Chord Recognition}{Luke O Rowe, George Tzanetakis}{articles/243.pdf}
+\includepaper{Deep Embeddings and Section Fusion Improve Music Segmentation}{Justin Salamon, Oriol Nieto, Nicholas J. Bryan}{articles/179.pdf}
+\includepaper{Multi-Task Learning of Graph-based Inductive Representations of Music Content}{Antonia Saravanou, Federico Tomasi, Rishabh Mehrotra, Mounia Lalmas}{articles/274.pdf}
+\includepaper{DadaGP: A Dataset of Tokenized GuitarPro Songs for Sequence Models}{Pedro Pereira Sarmento, Adarsh Kumar, Cj Carr, Zack Zukowski, Mathieu Barthet, Yi-Hsuan Yang}{articles/140.pdf}
+\includepaper{Does Track Sequence in User-generated Playlists Matter?}{Harald Victor Schweiger, Emilia Parada-Cabaleiro, Markus Schedl}{articles/052.pdf}
+\includepaper{A Differentiable Cost Measure for Intonation Processing in Polyphonic Music}{Simon J Schwär, Sebastian Rosenzweig, Meinard Müller}{articles/209.pdf}
+\includepaper{Improving Music Performance Assessment With Contrastive Learning}{Pavan M Seshadri, Alexander Lerch}{articles/184.pdf}
+\includepaper{Tracing Affordance and Item Adoption on Music Streaming Platforms}{Dougal Shakespeare, Camille Roth}{articles/219.pdf}
+\includepaper{Computational Analysis and Modeling of Expressive Timing in Chopin's Mazurkas}{Zhengshan Shi}{articles/271.pdf}
+\includepaper{Computational Analysis of Melodic Mode Switching in Raga Performance}{Nithya Nadig Shikarpur, Asawari Keskar, Preeti Rao}{articles/190.pdf}
+\includepaper{SinTra: Learning an Inspiration Model from a Single Multi-track Music Segment}{Qingwei Song, Qiwei Sun, Dongsheng Guo, Haiyong Zheng}{articles/094.pdf}
+\includepaper{Contrastive Learning of Musical Representations}{Janne Spijkervet, John Ashley Burgoyne}{articles/263.pdf}
+\includepaper{Musical Tempo Estimation Using a Multi-scale Network}{Xiaoheng Sun, Qiqi He, Gao Yongwei, Wei Li}{articles/311.pdf}
+\includepaper{On the Integration of Language Models into Sequence to Sequence Architectures for Handwritten Music Recognition}{Pau Torras, Arnau Baró, Lei Kang, Alicia Fornés}{articles/112.pdf}
+\includepaper{Kiite Cafe: A Web Service for Getting Together Virtually to Listen to Music}{Kosetsu Tsukuda, Keisuke Ishida, Masahiro Hamasaki, Masataka Goto}{articles/032.pdf}
+\includepaper{Toward an Understanding of Lyrics-viewing Behavior While Listening to Music on a Smartphone}{Kosetsu Tsukuda, Masahiro Hamasaki, Masataka Goto}{articles/044.pdf}
+\includepaper{The Words Remain the Same: Cover Detection with Lyrics Transcription}{Andrea Vaglio, Romain Hennequin, Manuel Moussallam, Gael Richard}{articles/024.pdf}
+\includepaper{MuseBERT: Pre-training Music Representation for Music Understanding and Controllable Generation}{Ziyu Wang, Gus Xia}{articles/046.pdf}
+\includepaper{Supervised Metric Learning For Music Structure Features}{Ju-Chiang Wang, Jordan B. L. Smith, Wei-Tsung Lu, Xuchen Song}{articles/081.pdf}
+\includepaper{Learning Long-term Music Representations via Hierarchical Contextual Constraints}{Shiqi Wei, Gus Xia}{articles/077.pdf}
+\includepaper{Learning Pitch-Class Representations from Score-Audio Pairs of Classical Music}{Christof Weiss, Johannes Zeitler, Tim Zunner, Florian Schuberth, Meinard Müller}{articles/051.pdf}
+\includepaper{Training Deep Pitch-Class Representations With a Multi-Label CTC Loss}{Christof Weiss, Geoffroy Peeters}{articles/118.pdf}
+\includepaper{Audio Defect Detection in Music with Deep Networks}{Daniel Wolff, Remi Mignot, Axel Roebel}{articles/075.pdf}
+\includepaper{Semi-supervised Music Tagging Transformer}{Minz Won, Keunwoo Choi, Xavier Serra}{articles/167.pdf}
+\includepaper{Emotion Embedding Spaces for Matching Music to Stories}{Minz Won, Justin Salamon, Nicholas J. Bryan, Gautham Mysore, Xavier Serra}{articles/175.pdf}
+\includepaper{CollageNet: Fusing Arbitrary Melody and Accompaniment into a Coherent Song}{Abudukelimu Wuerkaixi, Christodoulos Benetatos, Zhiyao Duan, Changshui Zhang}{articles/031.pdf}
+\includepaper{Human-in-the-Loop Adaptation for Interactive Musical Beat Tracking}{Kazuhiko Yamamoto}{articles/027.pdf}
+\includepaper{Composer Classification With Cross-Modal Transfer Learning and Musically-Informed Augmentation}{Daniel Yang, Timothy Tsai}{articles/192.pdf}
+\includepaper{Aligning Unsynchronized Part Recordings to a Full Mix Using Iterative Subtractive Alignment}{Daniel Yang, Kevin Ji, Timothy Tsai}{articles/194.pdf}
+\includepaper{ADTOF: A Large Dataset of Non-synthetic Music for Automatic Drum Transcription}{Mickael Zehren, Marco Alunno, Paolo Bientinesi}{articles/134.pdf}
+\includepaper{Learn by Referencing: Towards Deep Metric Learning for Singing Assessment}{Huan Zhang, Yiliang Jiang, Tao Jiang, Hu Peng}{articles/070.pdf}
+\includepaper{AccoMontage: Accompaniment Arrangement via Phrase Selection and Style Transfer}{Jingwei Zhao, Gus Xia}{articles/188.pdf}
