--- a/202x_Proceedings_ISMIR/keynotes.tex
+++ b/202x_Proceedings_ISMIR/keynotes.tex
@@ -1,23 +1,87 @@
 %-------------------------------------------
-\thispagestyle{empty}\cleardoublepage
-\phantomsection
-\addcontentsline{toc}{section}{Keynote Talks}
-\includepdf[pages=-,pagecommand=\thispagestyle{empty}]{external/10_Keynote_SectionDivider.pdf}
-\thispagestyle{empty}\cleardoublepage
+%\phantomsection
+%\addcontentsline{toc}{chapter}{Keynote Talks}
+\chapter*{Keynote Talks}
+\cleardoublepage
 %-------------------------------------------
 
 
 % Keynote talk 1
 \phantomsection
-\addcontentsline{toc}{subsection}{Jukebox and Musenet: Generating Raw Audio and MIDI Music\\\textit{Christine McLeavey}}
-\includepdf[pages=-,pagecommand=\thispagestyle{fancy}]{external/10_Keynote_1.pdf}
+\addcontentsline{toc}{section}{Help! - Bridging the Gap Between Music Technology and Diverse Stakeholder Needs
+\texorpdfstring{\\\textit{Christine Bauer}}{}}
+\section*{Keynote Talk -- 1}
+\subsection*{Help! -- Bridging the Gap Between Music Technology and Diverse Stakeholder Needs}
+\speaker{Christine Bauer}
+
+Professor of Interactive Intelligent Systems\\
+Paris Lodron University Salzburg
+
+
+\subsection*{Abstract}
+Music information retrieval (MIR) has become an indispensable asset in the music industry. It powers music recommendations for listeners and supports artists in mastering their crafts. While MIR has made remarkable progress, we need to improve in serving the multifaceted needs of stakeholders who rely on these technologies. Taking examples from music recommender systems, I will demonstrate the potential risks of neglecting artists' needs and provide strategies for mitigation.
+
+\subsection*{Biography}
+Christine Bauer is EXDIGIT Professor of Interactive Intelligent Systems at the Department of Artificial Intelligence and Human Interfaces (AIHI) at the Paris Lodron University Salzburg, Austria.
+
+Her research centers on interactive intelligent systems, where she integrates research on intelligent technologies, the interaction of humans with an intelligent system, and their interplay. She takes a human-centered perspective, where technology follows humans' and society's needs. In recent years, she worked on context-aware recommender systems in the music and media domains. The core interests in her research activities are fairness and multi-method evaluations.
+
+She has authored more than 100 papers and holds several best paper awards and many awards for her reviewing activities. She received the prestigious Elise Richter career research grant (2017–2020), funded by the Austrian Science Fund (FWF). She is on the Editorial Board of ACM Transactions on Recommender Systems (TORS) and co-organizes the Workshop series ``Perspectives on the Evaluation of Recommender Systems (PERSPECTIVES)''.
+
+She advocates for equal opportunities and engages in initiatives such as Women in Music Information Retrieval (WiMIR) and the Allyship program at CHI.
+
+Further information can be found at \href{https://christinebauer.eu}{\nolinkurl{https://christinebauer.eu}}.
+
+\clearpage
+
 
 % Keynote talk 2
 \phantomsection
-\addcontentsline{toc}{subsection}{Acoustic Singularities of Some Songs of Oral Tradition\\\textit{Mich\'ele Castellengo}}
-\includepdf[pages=-,pagecommand=\thispagestyle{fancy}]{external/10_Keynote_2.pdf}
+\addcontentsline{toc}{section}{Building \& Launching MIR Systems at Industry Scale
+\texorpdfstring{\\\textit{Rachel Bittner}}{}}
+\section*{Keynote Talk -- 2}
+\subsection*{Building \& Launching MIR Systems at Industry Scale}
+\speaker{Rachel Bittner}
 
-% WiMIR Keynote talk
+Research Manager\\
+Spotify
+
+\subsection*{Abstract}
+There is a considerable gap in the research and engineering methods we use to build MIR systems for academic research and the way we build them for industry-scale systems. This keynote covers some of the many differences and challenges faced when building MIR systems for industry applications. We first discuss the way we define problems in the first place, and why the academic definition of problems is often ill-suited for a particular application. There are also substantial differences in engineering workflows – in particular when multiple researchers and engineers build a single system. We explore differences in academic datasets which are usually ``small and clean'' to real-world datasets which are ``large and noisy''. Academic metrics are useful for us scientists, but they often either don't match a product use case or mean nothing to product teams. Finally, we dig into deployment considerations including how to run inference flexibly, considering cost and speed, and where the system needs to run. We will explore numerous real-world examples throughout and provide insight into how to build MIR systems within industry.
+
+\subsection*{Biography}
+Rachel is a Research Manager at Spotify in Paris. Before Spotify, she worked at NASA Ames Research Center in the Human Factors division. She received her Ph.D. degree in music technology and digital signal processing from New York University. Before that, she did a Master's degree in Mathematics at New York University, and a joint Bachelor's degree in Music Performance and Math at UC Irvine. Her research interests include automatic music transcription, musical source separation, metrics, and dataset creation.
+
+\clearpage
+
+% Keynote talk 3
 \phantomsection
-\addcontentsline{toc}{subsection}{Improving Diversity and Inclusivity Through Action\\\textit{Laurel Smith Pardue}}
-\includepdf[pages=-,pagecommand=\thispagestyle{fancy}]{external/10_WiMIR_Keynote.pdf}
+\addcontentsline{toc}{section}{Seeing the Light Through Music, a Blind Man's Journey of Discovery Through Audio and How to Navigate Making Music That Speaks to the World in the Age of the Screen Driven Universe
+\texorpdfstring{\\\textit{Joey Stuckey}}{}}
+\section*{Keynote Talk -- 3}
+\subsection*{Seeing the Light Through Music, a Blind Man's Journey of Discovery Through Audio and How to Navigate Making Music That Speaks to the World in the Age of the Screen Driven Universe}
+\speaker{Joey Stuckey}
+
+Professor of Music Technology\\
+Mercer University
+
+\subsection*{Abstract}
+This presentation will encompass:
+\begin{itemize}
+\item Diversity, Equity, Inclusion and Accessibility issues and best practices for a truly vibrant and equitable community in the audio industry and music business.
+\item Getting back to fundamentals, critical listening in the age of the ``Screen Driven Universe''.
+\item Important elements of music making and the recording sciences
+\item How to live a successful life of intention despite obstacles
+\end{itemize}
+
+
+\subsection*{Biography}
+Joey Stuckey is the Official Music Ambassador of his hometown of Macon, Georgia. Joey spends every moment living life to the fullest and sharing his story and inspirational spirit through his musical performances and speaking engagements. As a toddler, Joey was diagnosed with a brain tumor and underwent surgery with little hope of survival. Though the tumor left Joey blind and with other health challenges, today, he continues to live a successful life of intention in his chosen field of music. Joey is professor of music technology at Mercer University, the music technology consultant for Middle Georgia State University, and an official music mentor for the Recording, Radio and Film Connection in Los Angeles as well as an active voting member of the Grammys. He is the owner and senior engineer at Shadow Sound Studio which is a destination recording facility with state-of-the-art analog and digital technology. He has spoken and performed all over the world including at the University College of London, the Georgia Music Hall of Fame, and the Audio Engineering Society in New York City, just to name a few. In his roles as producer, engineer, recording artist and journalist, he has worked with many musical legends including Trisha Yearwood, Clarence Carter, James Brown, Alan Parsons, Gene Simmons (KISS), Al Chez (Tower of Power), Jimmy Hall (Wet Willie), Danny Seraphin (Chicago), Kevin Kenney (Drivin' and Cryin'), and many, many more.
+
+For more information visit \href{https://www.joeystuckey.com}{\nolinkurl{www.joeystuckey.com}}
+
+Facebook: \href{https://www.facebook.com/joeystuckey/}{\nolinkurl{https://www.facebook.com/joeystuckey}}
+
+Twitter: \href{https://twitter.com/jstuckeymusic/}{\nolinkurl{@jstuckeymusic}}
+
+Instagram: \href{https://www.instagram.com/jstuckeymusic/}{\nolinkurl{@jstuckeymusic}}
